# Multilingual

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  Dockerfile  README.md  _env_setup.py  docker-compose.yml  ingest_cache.py  lingua_langs.json  main.py  pyproject.toml  pyrightconfig.json  query_cli.py  requirements-ci.txt  requirements.txt  server.py  test_lang_detect.py  test_query.py
.github/workflows/: ci-cd.yml  ci.yml
eval/: README.md  __init__.py  eval_logger.py  golden_dataset.json  judge.py  quick_test.py  report.md  results.json  run_eval.py
eval/metrics/: __init__.py  generation_metrics.py  retrieval_metrics.py
ocr/: __init__.py  config.py  extractors.py  ocr_engine.py  ocr_worker.py  pipeline.py  text_processing.py  vector_store.py
query/: STT.py  TTS.py  __init__.py  config.py  logging_config.py  phonetic_corrector.py  protected_terms.py  voice_pipeline.py
query/agents/: error_handling.py  faq_agent.py  knowledge_rag_agent.py  pipeline.py  router_agent.py  validation_agent.py  web_agent.py
tests/: conftest.py  test_health.py  test_language_detection.py  test_rag_pipeline.py
